Fix bug where dragging the list on mobile view by holding the title area would prioritize highlighting the title area text, over allowing list dragging

--- a/frontend/src/app/features/board-page/components/list/list.component.scss
+++ b/frontend/src/app/features/board-page/components/list/list.component.scss
@@ -87,6 +87,16 @@
     }
   }
   
+  .list-title-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    z-index: 1;
+    user-select: none;
+  }
 
   .menu-button {
     align-self: flex-start;
